# Singleton-Template-Object-Factory-Sample

./: CMakeLists.txt  README.md  main.cpp
include/: AnimalInterface.h  CMakeLists.txt  Dog.h  ObjectFactory.h  Sheep.h
src/: CMakeLists.txt  Dog.cpp  Sheep.cpp
